--- a/index.html
+++ b/index.html
@@ -1,23 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Way Keeper: Route Optimizer</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/"
-  }
-}
-</script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Way Keeper</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+<body>
+  <div class="container">
+    <div class="header">
+      <h1>Way Keeper</h1>
+      <p>Your smart route optimizer</p>
+    </div>
+
+    <div class="input-section">
+      <label for="locations">
+        <span class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />
+          </svg>
+        </span>
+        Enter locations, one per line:
+      </label>
+      <textarea id="locations" rows="5" placeholder="Red Fort, Delhi\nTaj Mahal, Agra\nAmber Fort, Jaipur"></textarea>
+
+      <button id="optimizeBtn">Optimize Route</button>
+      <p id="loadingMessage" class="loading-message"></p>
+    </div>
+
+    <div id="errorBox" class="hidden error-box">
+      <p class="error-title">Error</p>
+      <p id="errorText"></p>
+    </div>
+
+    <div id="resultBox" class="hidden result-box">
+      <h2>Your Optimized Route</h2>
+      <div class="stats">
+        <div class="stat red">
+          <p>Original Distance</p>
+          <p id="originalDist" class="value"></p>
+        </div>
+        <div class="stat green">
+          <p>Optimized Distance</p>
+          <p id="optimizedDist" class="value"></p>
+        </div>
+        <div class="stat blue">
+          <p>Distance Saved</p>
+          <p id="savedDist" class="value"></p>
+          <p id="savedPercent" class="subtext"></p>
+        </div>
+      </div>
+
+      <div class="link-box">
+        <a href="#" id="routeUrl" target="_blank">Generated route link</a>
+        <button id="copyBtn" aria-label="Copy URL">
+          <svg id="copyIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <p>&copy; <span id="year"></span> Way Keeper. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
 </html>
